# semiconductor

./: .gitignore  CMakeLists.txt  README.md  configure.cpp  configure.h  example.cpp  function.h  message.cpp  message.h  pn_diode.cpp  pn_diode.h  test.cpp  test_configure.cpp  test_message.cpp  test_pn_diode.cpp  test_pn_diode_ideal.cfg
.github/workflows/: cmake-single-platform.yml
